--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
 }
 /* button music */
 
-
+/* awal */
 .home{
   width: 100%;
   height: 630px;
@@ -554,6 +554,57 @@ video{
   .footer>p{
     font-size: 12px;
   }
+  .home{
+    width: 100%;
+    height: 630px;
+    background-image: url(img/10.jpg) !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .home>.banner>.text{
+    color: white;
+    padding-top: 150px;
+  }
+  .banner>.text>h1{
+    margin-top: -10px;
+    color: #ceb66b;
+    font-size: 30px;
+    font-family: font4;
+  }
+  .banner>.text>h1>span{
+    color: #ceb66b;
+    font-family: font1;
+  }
+  .banner>.text>.title-home>h4{
+    font-size: 20px;
+    font-family: font3;
+    font-weight: bolder;
+    text-shadow: 1px 1px 3px #ceb66b;
+  }
+  .banner>.text>.title-home{
+    width: 30%;
+    margin: auto;
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .banner>.text>.content>h6{
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+    font-size: 12px;
+    font-family: font3;
+    font-weight: bolder;
+    text-shadow: 1px 1px 3px #ceb66b;
+  }
+  .banner>.text>a{
+    margin-top: 40px;
+    color: #ceb66b !important;
+    font-family: font3;
+    font-size: 12px;
+    border-color: #ceb66b;
+  }
 }
 @media (max-width: 575px) {
   .header>.img-header>img{
@@ -690,5 +741,58 @@ video{
   }
   .footer>p{
     font-size: 12px;
+  }
+
+
+  .home{
+    width: 100%;
+    height: 630px;
+    background-image: url(img/10.jpg) !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .home>.banner>.text{
+    color: white;
+    padding-top: 150px;
+  }
+  .banner>.text>h1{
+    margin-top: -10px;
+    color: #ceb66b;
+    font-size: 30px;
+    font-family: font4;
+  }
+  .banner>.text>h1>span{
+    color: #ceb66b;
+    font-family: font1;
+  }
+  .banner>.text>.title-home>h4{
+    font-size: 20px;
+    font-family: font3;
+    font-weight: bolder;
+    text-shadow: 1px 1px 3px #ceb66b;
+  }
+  .banner>.text>.title-home{
+    width: 30%;
+    margin: auto;
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .banner>.text>.content>h6{
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+    font-size: 12px;
+    font-family: font3;
+    font-weight: bolder;
+    text-shadow: 1px 1px 3px #ceb66b;
+  }
+  .banner>.text>a{
+    margin-top: 40px;
+    color: #ceb66b !important;
+    font-family: font3;
+    font-size: 12px;
+    border-color: #ceb66b;
   }
 }
