--- a/style.css
+++ b/style.css
@@ -41,19 +41,23 @@ body{
   font-size: 18px; /* Increase font size */
 }
 
-#myBtn:hover {
-  background-color: white; /* Add a dark-grey background on hover */
-}
 /* button music */
 
 /* awal */
 .home{
+  position: fixed;
+  z-index: 99;
   width: 100%;
-  height: 630px;
+  height: 100vh;
   background-image: url(img/9.jpg) !important;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+.home>.banner{
+  display: flex;
+  z-index: 1;
+  justify-content: center;
 }
 .home>.banner>.text{
   color: white;
@@ -88,7 +92,7 @@ body{
   font-weight: bolder;
   text-shadow: 1px 1px 3px #ceb66b;
 }
-.banner>.text>a{
+.banner>.text>button{
   color: #ceb66b !important;
   font-family: font3;
   border-color: #ceb66b;
@@ -554,9 +558,12 @@ video{
   .footer>p{
     font-size: 12px;
   }
+
+
+
   .home{
     width: 100%;
-    height: 630px;
+    height: 843px;
     background-image: url(img/10.jpg) !important;
     background-repeat: no-repeat;
     background-size: cover;
@@ -564,12 +571,12 @@ video{
   }
   .home>.banner>.text{
     color: white;
-    padding-top: 150px;
+    padding-top: 200px;
   }
   .banner>.text>h1{
     margin-top: -10px;
     color: #ceb66b;
-    font-size: 30px;
+    font-size: 40px;
     font-family: font4;
   }
   .banner>.text>h1>span{
@@ -577,32 +584,32 @@ video{
     font-family: font1;
   }
   .banner>.text>.title-home>h4{
-    font-size: 20px;
+    font-size: 30px;
     font-family: font3;
     font-weight: bolder;
     text-shadow: 1px 1px 3px #ceb66b;
   }
   .banner>.text>.title-home{
-    width: 30%;
+    width: 40%;
     margin: auto;
     border-radius: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
   .banner>.text>.content>h6{
-    width: 50%;
+    width: 60%;
     margin: auto;
     margin-top: 10px;
-    font-size: 12px;
+    font-size: 18px;
     font-family: font3;
     font-weight: bolder;
     text-shadow: 1px 1px 3px #ceb66b;
   }
-  .banner>.text>a{
+  .banner>.text>button{
     margin-top: 40px;
     color: #ceb66b !important;
     font-family: font3;
-    font-size: 12px;
+    font-size: 18px;
     border-color: #ceb66b;
   }
 }
@@ -746,7 +753,7 @@ video{
 
   .home{
     width: 100%;
-    height: 630px;
+    height: 843px;
     background-image: url(img/10.jpg) !important;
     background-repeat: no-repeat;
     background-size: cover;
@@ -754,12 +761,12 @@ video{
   }
   .home>.banner>.text{
     color: white;
-    padding-top: 150px;
+    padding-top: 200px;
   }
   .banner>.text>h1{
     margin-top: -10px;
     color: #ceb66b;
-    font-size: 30px;
+    font-size: 40px;
     font-family: font4;
   }
   .banner>.text>h1>span{
@@ -767,32 +774,32 @@ video{
     font-family: font1;
   }
   .banner>.text>.title-home>h4{
-    font-size: 20px;
+    font-size: 30px;
     font-family: font3;
     font-weight: bolder;
     text-shadow: 1px 1px 3px #ceb66b;
   }
   .banner>.text>.title-home{
-    width: 30%;
+    width: 40%;
     margin: auto;
     border-radius: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
   .banner>.text>.content>h6{
-    width: 50%;
+    width: 60%;
     margin: auto;
     margin-top: 10px;
-    font-size: 12px;
+    font-size: 18px;
     font-family: font3;
     font-weight: bolder;
     text-shadow: 1px 1px 3px #ceb66b;
   }
-  .banner>.text>a{
+  .banner>.text>button{
     margin-top: 40px;
     color: #ceb66b !important;
     font-family: font3;
-    font-size: 12px;
+    font-size: 18px;
     border-color: #ceb66b;
   }
 }
